# nature-remo-temp-monitor

./: .gitignore  README.md  app.py  collect_data.py  config.py  main.py  pyproject.toml
.github/workflows/: collect_temperature.yml
tests/: __init__.py  test_collect_data.py
